fix watch btn on mobile

--- a/src/css/application.css
+++ b/src/css/application.css
@@ -379,6 +379,10 @@ footer a:hover {
 }
 
 @media (max-width: 1024px) {
+  #hero {
+    flex-direction: column;
+  }
+
   #hero h1 {
     font-size: 40px;
   }
